# scs

./: .gitmodules  CMakeLists.txt
include/astral_bodies/: planets.h
include/general/: basic_entities.h  common.h  parser.h  scenario_manager.h  set_manager.h
include/physics/: physic_engine.h
include/ships/: basic_ship.h
include/window_handler/: child_windows.h  log_window.h  tactical_window.h
old/: main.txt
scenarios/: sol.json
service_set/: basic_set.json
source/: main.cpp
source/astral_bodies/: planets.cpp
source/general/: basic_entities.cpp  scenario_manager.cpp
source/physics/: physics_engine.cpp
source/ships/: basic_ship.cpp  basic_ships.cpp
source/window_handler/: child_windows.cpp  log_window.cpp  tactical_window.cpp
